[project]
name = "security-mcp"
version = "0.1.0"
description = "MCP server providing security intelligence tools (starting with NVD CVE lookup)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
security-mcp = "security_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/security_mcp"]
